--- a/bounce_styles.css
+++ b/bounce_styles.css
@@ -17,3 +17,26 @@ svg {
     top: calc(50% - 50px);
 }
 
+
+@keyframes bounce{
+   0%{
+    opacity:0; 
+    transform: scale(0.1);
+    
+   } 
+   50%{
+    opacity:1; 
+    transform: scale(1);
+   }
+   100%{
+    opacity:0; 
+    transform: scale(0.1);
+    
+   }
+}
+circle {
+    animation: bounce 2s;
+    animation-iteration-count: infinite;
+}
+
+
